Corrette le configurazioni di alcuni plugin.
Sono state modificate le configurazioni dei plugin cosicché non si
presenti più l'errore relativo all'apertura dei moduli java.base.
Inoltre è stata rimossa temporaneamente la configurazione per lo
svolgimento dei test E2E in quanto non funziona.
I test E2E sono stati implementati nella loro interezza.

https://github.com/jacopos97/notebook-project/issues/19