@@ -21,6 +21,7 @@
 		<commons-validator.version>1.7</commons-validator.version>
 		<log4j.version>2.20.0</log4j.version>
 		<picocli.version>4.7.3</picocli.version>
+		<surefire.version>3.1.2</surefire.version>
 
 		<sonar.issue.ignore.multicriteria>e11</sonar.issue.ignore.multicriteria>
 
@@ -92,8 +93,15 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${surefire.version}</version>
+					<configuration>
+						<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
 					<artifactId>maven-surefire-report-plugin</artifactId>
-					<version>3.1.2</version>
+					<version>${surefire.version}</version>
 					<configuration>
 						<linkXRef>false</linkXRef>
 					</configuration>
@@ -187,6 +195,7 @@
 					<systemPropertyVariables>
 						<mongo.port>${mongo.mapped.port}</mongo.port>
 					</systemPropertyVariables>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
 				</configuration>
 				<executions>
 					<execution>
@@ -196,7 +205,7 @@
 							<goal>verify</goal>
 						</goals>
 					</execution>
-					<execution>
+					<!-- <execution>
 						<id>e2e-tests</id>
 						<goals>
 							<goal>integration-test</goal>
@@ -210,7 +219,7 @@
 								<include>**/*E2E.java</include>
 							</includes>
 						</configuration>
-					</execution>
+					</execution>  -->
 				</executions>
 			</plugin>
 			<plugin>
